// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`css @supports 1`] = `
@supports (display:grid) {
  .glamor-0 {
    display: grid;
  }
}

<div
  class="glamor-0"
/>
`;

exports[`css css variables 1`] = `
.glamor-0 {
  --some-var: 1px;
  width: var(--some-var);
}

<div
  class="glamor-0"
/>
`;

exports[`css empty rule 1`] = `
<div
  class="css-0"
/>
`;

exports[`css float property 1`] = `
.glamor-0 {
  float: left;
}

<div
  class="glamor-0"
/>
`;

exports[`css handles more than 10 dynamic properties 1`] = `
.glamor-0 {
  text-decoration: underline;
  border-right: solid blue 54px;
  background: white;
  color: black;
  display: block;
  border-radius: 3px;
  padding: 25px;
  width: 500px;
  z-index: 100;
  font-size: 18px;
  text-align: center;
}

<div
  class="glamor-0"
/>
`;

exports[`css nested 1`] = `
.glamor-0 .some-class .some-other-class {
  background-color: hotpink;
}

.glamor-0 .some-class {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.glamor-0 {
  color: yellow;
}

@media (max-width:600px) {
  .glamor-0 .some-class {
    background-color: pink;
  }
}

<div
  class="glamor-0"
>
  <div
    class="some-class"
  >
    <div
      class="some-other-class"
    />
  </div>
</div>
`;

exports[`css nested at rules 1`] = `
@supports (display:flex) {
  .glamor-0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@supports (display:grid) {
  .glamor-0 {
    display: grid;
  }
}

@media (max-width:500px) {
  .glamor-0 {
    color: hotpink;
  }
}

@media (min-width:420px) {
  .glamor-0 {
    color: pink;
  }
}

<div
  class="glamor-0"
/>
`;

exports[`css random expression 1`] = `
.glamor-0 {
  font-size: 20px;
  background: green;
}

@media (min-width:420px) {
  .glamor-0 {
    color: blue;
    width: 96px;
    height: 96px;
    line-height: 40px;
  }
}

<div
  class="glamor-0"
/>
`;

exports[`css selectivity when composing 1`] = `
.glamor-0 {
  color: green;
  color: blue;
  color: red;
}

<div
  class="glamor-0"
/>
`;

exports[`css with array interpolation 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="glamor-0"
/>
`;

exports[`css with object interpolation 1`] = `
.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<div
  class="glamor-0"
/>
`;
